--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/head.jpg
 email: mhshenaa@connect.ust.hk
 description: Personal Website
 keyword: 个人网站
-url: "https://mhshen.github.io"          # your host, for absolute URL
+url: "https://Submontane.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/Submontane/mhshen.github.io.git" # you code repository
+github_repo: "https://github.com/Submontane/Submontane.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
