--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Minghong SHEN
 SEOTitle: 沈明宏
-header-img: img/head.jpg
+header-img: img/background.jpeg
 email: mhshenaa@connect.ust.hk
 description: Personal Website
 keyword: 个人网站
@@ -96,16 +96,10 @@ service-worker: true
 
 
 
-# 友情链接，请尽量不要删除，谢谢！
+# 友情链接
 friends: [
     {
-        title: "星球国际语",
-        href: "https://globien.gitee.io"
-    },{
-        title: "星球语互动社区",
-        href: "https://tieba.baidu.com/f?kw=%E6%A0%BC%E7%BD%97%E6%AF%94%E8%A8%80&fr=home"
-    },{
-        title: "知乎：人造国际语",
-        href: "https://zhuanlan.zhihu.com/Artificial-International-Language"
+        title: "本网站",
+        href: "https://mhshen.com"
     }
 ]
